--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 							</button>
 						</div>
 						<div class="collapse navbar-collapse" id="navbar_collapse">
+							<p class="nav-log">Navigate here!</p>
 							<ul class="nav navbar-nav">
 								<li><a data-scroll href="#body"></a><span>About</span></li>
 								<!-- <li><a data-scroll href="#services_sec"></a><span>Latest</span></li> -->
