--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p class="nav-log">Navigate here!</p>
 							<ul class="nav navbar-nav">
 								<li><a data-scroll href="#body"></a><span>About</span></li>
-								<!-- <li><a data-scroll href="#services_sec"></a><span>Latest</span></li> -->
+								<li><a data-scroll href="#services_sec"></a><span>Latest</span></li>
 								<li><a data-scroll href="#skill_sec"></a><span>My Skills</span></li>
 								<li><a data-scroll href="#work_sec"></a><span>My Works</span></li>
 								<li><a data-scroll href="#edu_sec"></a><span>My XP and Badges</span></li>
@@ -125,11 +125,12 @@
 
 						<hr class="separater-hr"/>
 
-						<!--WhatWeDo Sec
+						<!--WhatWeDo Sec--->
 						<section id="services_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div services-icon-wrap  sec-pad-top sec-pad-bottom-xs">
-							<h3>THE RECENT STUFF I TALKED ABOUT
-							</h3>
+							<h6>RECENT STUFF I TALKED ABOUT
+							</h6>
 
+							<a target="blank" href="https://lofibusiness.notion.site/My-first-code-5-years-old-Me-ac0d171d234b4148afd6bc6b484732c4">
 							<div class="container issues-row">
 								<div class="col-lg-6 text-left">
 									<h5>My first code - 7 years old Marcel</h5>
@@ -139,26 +140,30 @@
 									<img class="img-issues" src="./img/marcel1995.png" alt="">	
 								</div>
 							</div>
-
-						<div class="container issues-row">
+						</a>
+						<a target="blank" href="https://lofibusiness.notion.site/The-Web-Accessibility-Urgency-2672db4934a548aebc59a6b7db222fd5">
+							<div class="container issues-row">
 							<div class="col-lg-6 text-left">
-								<h5>The Acessibility Urgency</h5>
+								<h5>Web Accessibility Urgency</h5>
 								<p class="excerpt">As a developer, I've had the opportunity to work with senior designers  fro</p>
 							</div>
 							<div class="col-lg-6">
-								<img class="img-issues" src="./img/20.png" alt="">	
+								<img class="img-issues" src="./img/one4all.png" alt="">	
 							</div>
 						</div>
+						</a>
 
-						<div class="container issues-row">
+						<a target="blank" href="https://lofibusiness.notion.site/Freestyle-chat-with-GPT-3-Pt-1-a03f4268d43840ddb1a78225e9aa9da4">
+							<div class="container issues-row">
 							<div class="col-lg-6 text-left">
-								<h5>Battle of CMS: Choose your fighter!</h5>
+								<h5>Freestyle talking with GPT-3!</h5>
 								<p class="excerpt">As a developer, I've had the opportunity to work with senior designers  fro</p>
 							</div>
 							<div class="col-lg-6">
-								<img class="img-issues" src="./img/21.png" alt="">	
+								<img class="img-issues" src="./img/gpt-3.png" alt="">	
 							</div>
 						</div>
+					</a>
 							
 						</section>-->
 						<!--/WhatWeDo Sec-->
