--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p class="nav-log">Navigate here!</p>
 							<ul class="nav navbar-nav">
 								<li><a data-scroll href="#body"></a><span>About</span></li>
-								<li><a data-scroll href="#services_sec"></a><span>Latest</span></li>
+								<!-- <li><a data-scroll href="#services_sec"></a><span>Latest</span></li> -->
 								<li><a data-scroll href="#skill_sec"></a><span>My Skills</span></li>
 								<li><a data-scroll href="#work_sec"></a><span>My Works</span></li>
 								<li><a data-scroll href="#edu_sec"></a><span>My XP and Badges</span></li>
@@ -125,7 +125,7 @@
 
 						<hr class="separater-hr"/>
 
-						<!--WhatWeDo Sec--->
+						<!--WhatWeDo Sec
 						<section id="services_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div services-icon-wrap  sec-pad-top sec-pad-bottom-xs">
 							<h6>RECENT STUFF I TALKED ABOUT
 							</h6>
@@ -164,8 +164,7 @@
 							</div>
 						</div>
 					</a>
-							
-						</section>-->
+				</section>--->
 						<!--/WhatWeDo Sec-->
 
 						<hr class="separater-hr"/>
