Update (rm PHP junk)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<meta name="description" content="Marcel Scognamiglio |" />
 		<meta name="keywords" content="Penelope, responsive resume template, cv template, multipurpose, responsive template, vcard, html5 template, themeforest, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js" />
 		<meta name="author" content="Scognamiglio"/>
+		<meta property="og:title" content="Marcel - Front End Web Dev" />
+		<meta property="og:type" content="site" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="https://github.com/marcelxv/portfolio/blob/50671b25e9e9d7358c2041780b7cc9e34e713cc9/img/cover.png" />
 
 		<!--Favicon-->
 		<link rel="shortcut icon" href="favicon.ico">
