--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>MARCEL SCOGNAMIGLIO</title>
 		<meta name="description" content="Marcel Scognamiglio |" />
-		<meta name="keywords" content="Penelope, responsive resume template, cv template, multipurpose, responsive template, vcard, html5 template, themeforest, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js" />
+		<meta name="keywords" content="marcel scognamiglio, web designer, web developer, front end developer, react, fiap, brazil, front end engineer, desenvolvedor, designer, desenvolvedor web, marcel scognamiglio" />
 		<meta name="author" content="Scognamiglio"/>
 		<meta property="og:title" content="Marcel - Front End Web Dev" />
 		<meta property="og:type" content="site" />
