--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<meta property="og:type" content="site" />
 		<meta property="og:url" content="" />
 		<meta property="og:image" content="https://github.com/marcelxv/portfolio/blob/50671b25e9e9d7358c2041780b7cc9e34e713cc9/img/cover.png" />
-
+		<meta property="og:image:width" content="400" />
+		<meta property="og:image:height" content="300" />
 		<!--Favicon-->
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
