--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:title" content="Marcel - Front End Web Dev" />
 		<meta property="og:type" content="site" />
 		<meta property="og:url" content="" />
-		<meta property="og:image" content="https://github.com/marcelxv/portfolio/blob/50671b25e9e9d7358c2041780b7cc9e34e713cc9/img/cover.png" />
+		<meta property="og:image" content="./img/opengraph.png" />
 		<meta property="og:image:width" content="400" />
 		<meta property="og:image:height" content="300" />
 		<!--Favicon-->
