update info / minor CSS tweaks

--- a/index.html
+++ b/index.html
@@ -108,29 +108,24 @@
 					<!--Introduction Sec-->
 					<section id="intro_content_sec"
 						class="col-lg-10 col-md-11 col-sm-11 center-div intro-content-wrap sec-pad">
+						<div class="emoji">👋🏼</div>
 						<div class="col-lg-8 col-md-8 col-sm-8">
-							<h1>Hi, I'm Marcel. <br>Developer, reseacher and teacher of systems and web interfaces
-								(Front End Guy), I love to build, disassemble and rebuild things using code<span
-									style="color: #E3FF00">*</span>.
+							<h1>Hi, Marcel here! <br>I'm ambitious front end developer with love for build and improve meaningful things using code<spanstyle="color: #E3FF00">*</spanstyle=>.<br>					
+
 							</h1>
 							<p class="pad-bottom-10 wow fadeInUp" data-wow-duration=".6s">
 								I'm 31 years old, almost 10 as web entrepreneur building apps and websites for startups
-								as partner or providing full web dev services on my own dev agency NÓS, in Brazil.</p>
+								as partner or providing full web development services on my own agency NÓS, in Brazil.</p>
 							<p class="pad-bottom-10 wow fadeInUp" data-wow-duration=".6s">
-								As a developer, I've had the opportunity to work with senior designers and developers
-								from all around world who have upped my expectations of what a web application should
-								be.
+
 							</p>
 							<p class="pad-bottom-10 wow fadeInUp" data-wow-duration=".6s">
-								Fortunately, I've been able to construct, rebuild, remix, and develop a variety of
-								things during this time utilizing various languages, libraries, and frameworks. And the
-								cooperation experience made my code more robust, maintainable, and well documented on a
-								daily basis.
+								I'm looking for a front end position / front end with focus on React or Vue to work and continue to learn abroad.
+
 
 								<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-									I recognize the need of refactoring and continuous code improvement for the greatest
-									readability, reuse, and structure. To be honest, I feel a little more serene every
-									time I make a commit that makes things better.
+									I'm vegetarian for more than 10 years now, "father" of two dachshunds, happily married. I make lo-fi beats and love to travel in my free time (chill guy).
+
 								</p>
 								<h6>* Incluinding Games and Websites!</h6>
 
@@ -199,45 +194,45 @@
 							apply it these concepts in the real world </p>
 						<div class="row margin-top-40">
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> JAVASCRIPT ES6</span>
+								<span class="progress-cat"><span>*</span> JAVASCRIPT<br> (5 years)</span>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> HTML5 & CSS3</span>
+								<span class="progress-cat"><span>*</span> HTML5 & CSS3<br> (8 years)</span>
 							</div>
 							<div class="clearfix"></div>
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> REACT</span>
+								<span class="progress-cat"><span>*</span> REACT<br> (+1 year)</span>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> SASS & TYPESCRIPT</span>
+								<span class="progress-cat"><span>*</span> TYPESCRIPT<br> (2 years)</span>
 							</div>
 							<div class="clearfix"></div>
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> PHP / MYSQL</span>
+								<span class="progress-cat"><span>*</span> PHP / MYSQL<br> (5 years)</span>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> NOCODE APPS SETUP</span>
+								<span class="progress-cat"><span>*</span> NOCODE APPS / CMS SETUP<br> (8 years)</span>
 							</div>
 							<div class="clearfix"></div>
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> WORDPRESS & SHOPIFY THEME</span>
+								<span class="progress-cat"><span>*</span> WORDPRESS & SHOPIFY THEME<br> (+6 years)</span>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> WEB SERVER SETUP</span>
+								<span class="progress-cat"><span>*</span> WEB SERVER SETUP<br> (+6 years)</span>
 							</div>
 							<div class="clearfix"></div>
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> DESIGN SYSTEM & PROTOTYPING</span>
+								<span class="progress-cat"><span>*</span> DESIGN SYSTEM & PROTOTYPING<br> (8 years)</span>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> PRODUCT DEVELOPMENT</span>
+								<span class="progress-cat"><span>*</span> PRODUCT DEVELOPMENT<br> (8 years)</span>
 							</div>
 							<div class="clearfix"></div>
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> UX / A/B TESTING</span>
+								<span class="progress-cat"><span>*</span> UX / A/B TESTING<br> (+4 years)</span>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat"><span>*</span> RESPONSIVE DESIGN</span>
+								<span class="progress-cat"><span>*</span> RESPONSIVE DESIGN<br> (+6 years)</span>
 							</div>
 							<div class="clearfix"></div>
 						</div>
