update cv pdf + community grammar

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									I'm vegetarian for more than 10 years now, "father" of two dachshunds, happily married. I make lo-fi beats and love to travel in my free time (chill guy).
 
 								</p>
-								<h6>* Incluinding Games and Websites!</h6>
+								<h6>* INCLUDING WEBAPPS AND WEBSITES FOR STARTUPS								</h6>
 
 						</div>
 
